# kubernetes-wallets

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/agents/: README.md  code-reviewer.md  debugger.md  pipeline-optimizer.md  product-reviewer.md  (+3 more)
ralph/: prd.json  prompt.md  run.sh
src/backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_org_hierarchy.py  0002_org_extended.py  0003_servers.py  0004_server_allocations.py  0005_quota_allocations.py  0006_projects.py  0007_user_roles.py
src/backend/app/: config.py  database.py  errors.py  main.py  middleware.py
src/backend/app/auth/: dependencies.py  jwt.py  ldap_client.py  roles.py
src/backend/app/helm/: provisioner.py
src/backend/app/models/: org.py  project.py  server.py
src/backend/app/repositories/: allocation_repo.py  project_repo.py  server_repo.py  user_role_repo.py
src/backend/app/routers/: admin.py  allocations.py  auth.py  calculator.py  health.py  projects.py  servers.py
src/backend/app/schemas/: admin.py  allocation.py  project.py  server.py
src/backend/app/services/: admin_service.py  allocation_service.py  calculator_service.py  project_service.py
src/backend/app/sync/: server_sync.py
src/backend/tests/: test_admin_service.py  test_allocation_service.py  test_auth.py  test_calculator.py  test_errors.py  test_health.py  test_migrations.py  test_project_service.py  test_server_sync.py
(+58 files in other folders)
